@@ -31,6 +31,13 @@ module RDF::N3
       $},
       Regexp::EXTENDED)
 
+    # FIXME: temporary patch until fixed in RDF.rb
+    # Allow for nil prefix mapping
+    def prefix(name, uri = nil)
+      name = name.to_s.empty? ? nil : (name.respond_to?(:to_sym) ? name.to_sym : name.to_s.to_sym)
+      uri.nil? ? prefixes[name] : prefixes[name] = RDF::URI(uri)
+    end
+
     ##
     # Initializes the N3 reader instance.
     #
