@@ -1,6 +1,7 @@
 === 0.3.0.pre
 * RDF.rb 0.3.0 compatibility updates
   * Remove literal_normalization and qname_hacks, add back uri_hacks (until 0.3.0)
+  * Use nil for default namespace
   * In Writer
     * Use only :prefixes for creating QNames.
     * Add :standard_prefixes and :default_namespace options.
